--- a/public/index.html
+++ b/public/index.html
@@ -46,51 +46,61 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link
       href="/assets/splashscreens/iphone5_splash.png"
+      sizes="568x320"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/iphone6_splash.png"
+      sizes="667x375"
       media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/iphoneplus_splash.png"
+      sizes="1104x621"
       media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/iphonex_splash.png"
+      sizes="812x375"
       media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/iphonexr_splash.png"
+      sizes="896x414"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/iphonexsmax_splash.png"
+      sizes="896x414"
       media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/ipad_splash.png"
+      sizes="1024x768"
       media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/ipadpro1_splash.png"
+      sizes="1112x834"
       media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/ipadpro3_splash.png"
+      sizes="1194x834"
       media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
     <link
       href="/assets/splashscreens/ipadpro2_splash.png"
+      sizes="1366x1024"
       media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image"
     />
