--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="/assets/css/animation.css" />
     <link rel="stylesheet" href="/assets/icons/main/style.css" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Unity" />
+    <meta name="apple-mobile-web-app-title" content="Todos" />
     <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link
